--- a/templates/post/news_list.html
+++ b/templates/post/news_list.html
@@ -3,6 +3,7 @@
 {% extends 'flatpages/default.html' %} 
  
 {% load custom_filters %}
+{% load custom_tags %}
 
 <!-- Название у нас будет products -->
 {% block title %}
@@ -13,7 +14,6 @@
 {% block content %}
 <p>Количество новостей : {{ posts|length }}</p>
 <h1> Список новостей </h1> <hr>
-{% if posts %}
 <table>
     {% for i in posts %}
     <tr>
@@ -23,7 +23,24 @@
     </tr>
     {% endfor %}
 </table>
-{% else %}
-    <h2>Новостей нет!</h2>
-{% endif %}    
+
+{% if page_obj.has_previous %}
+       <a href="?page=1">1</a>
+       {% if page_obj.previous_page_number != 1 %}
+           ...
+           <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+       {% endif %}
+   {% endif %}
+
+   {# Информация о текущей странице #}
+   {{ page_obj.number }}
+
+   {# Информация о следующих страницах #}
+   {% if page_obj.has_next %}
+       <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
 {% endblock content %}
