--- a/templates/post_search.html
+++ b/templates/post_search.html
@@ -16,14 +16,14 @@
         <input type="submit" value="Найти" />
     </form>
     <hr>
-    {% if posts %}
+    {% if news %}
 <table>
     <tr>
         <tr>Название поста</tr>
         <tr>Дата поста</tr>
         <tr>Текст</tr>
     </tr>
-    {% for i in posts %}
+    {% for i in news %}
     <tr>
         <td>{{ i.name_post|censor }}</td>
         <td>{{ i.date_post|date:'d M Y' }}</td>
