--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -12,7 +12,11 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
+
     <body>
+        {% load cache %}
+        {% cache 300 navbar %}
+        {% block navbar %}
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
@@ -35,6 +39,8 @@
                 </div>
             </div>
         </nav>
+        {% endblock navbar %}
+        {% endcache %} 
         <!-- Page content-->
         <div class="container">
             <div class="text-center mt-5">
