--- a/templates/news_list.html
+++ b/templates/news_list.html
@@ -1,7 +1,7 @@
 <!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 
 {% extends 'flatpages/default.html' %} 
- 
+{% load i18n %} 
 {% load custom_filters %}
 {% load custom_tags %}
 {% load cache %}
@@ -17,18 +17,33 @@
  
 <!-- В контенте на странице мы выводим все прсты -->
 {% block content %}
-<p>Количество новостей : {{ posts|length }}</p>
+<form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
+    <input type="hidden" name="next" value="{{ redirect_to }}">
+    {% get_current_language as LANGUAGE_CODE %}
+    <select name="language" id="">
+        {% get_available_languages as LANGUAGES %} <!-- получаем языки -->
+        {% get_language_info_list for LANGUAGES as languages %} <!-- Помещаем их в список languages -->
+        {% get_current_language as LANGUAGE_CODE %}
+        {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
+            <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                {{ language.name_local }} - {{ language.code }}
+            </option>
+        {% endfor %}
+    </select>
+    <input type="submit" value="set">
+</form>
+<p>{% trans 'Количество новостей :' %} {{ post|length }}</p>
     {% if Is_not_author %}
-     <button><a href="{% url 'author_now' %}">Стать автором</a></button>
+     <button><a href="{% url 'author_now' %}">{% trans 'Стать автором' %}</a></button>
     {% endif %}
-<h1> Список новостей </h1> <hr>
+<h1>{% trans 'Список новостей' %}</h1> <hr>
  {# Теперь будем проверять не request.user.is_authenticated, а конкретные права #}
  {% if perms.news.add_product %}
- <a href="{% url 'news_create' %}">Добавить новость</a> <a href="{% url 'articles_create' %}">Добавить статью</a>
+ <a href="{% url 'news_create' %}">{% trans 'Добавить новость' %}</a> <a href="{% url 'articles_create' %}">{% trans 'Добавить статью' %}</a>
  {% endif %}
 <table>
     <tr>
-        <td>Название</td>
+        <td>{% trans 'Название' %}</td>
         <td>Дата</td>
         <td>Описание</td>
 
@@ -38,7 +53,7 @@
         {% endif %}
 
     </tr>
-    {% for i in posts %}
+    {% for i in post %}
     <tr>
         <td>{{ i.name_post|censor }}</td>
         <td>{{ i.date_post|date:'d M Y' }}</td>
