--- a/templates/news_list.html
+++ b/templates/news_list.html
@@ -12,26 +12,11 @@
 
 <!-- Название у нас будет products -->
 {% block title %}
-Список новостей
+{% trans 'Список новостей'%}
 {% endblock title %}
  
 <!-- В контенте на странице мы выводим все прсты -->
 {% block content %}
-<form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
-    <input type="hidden" name="next" value="{{ redirect_to }}">
-    {% get_current_language as LANGUAGE_CODE %}
-    <select name="language" id="">
-        {% get_available_languages as LANGUAGES %} <!-- получаем языки -->
-        {% get_language_info_list for LANGUAGES as languages %} <!-- Помещаем их в список languages -->
-        {% get_current_language as LANGUAGE_CODE %}
-        {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
-            <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
-                {{ language.name_local }} - {{ language.code }}
-            </option>
-        {% endfor %}
-    </select>
-    <input type="submit" value="set">
-</form>
 <p>{% trans 'Количество новостей :' %} {{ post|length }}</p>
     {% if Is_not_author %}
      <button><a href="{% url 'author_now' %}">{% trans 'Стать автором' %}</a></button>
@@ -41,31 +26,31 @@
  {% if perms.news.add_product %}
  <a href="{% url 'news_create' %}">{% trans 'Добавить новость' %}</a> <a href="{% url 'articles_create' %}">{% trans 'Добавить статью' %}</a>
  {% endif %}
-<table>
+<table width="500">
     <tr>
         <td>{% trans 'Название' %}</td>
-        <td>Дата</td>
-        <td>Описание</td>
+        <td>{% trans 'Дата' %}</td>
+        <td>{% trans 'Описание' %}</td>
 
         {# Условие получается составным. #}
         {% if perms.news.change_product or perms.news.delete_product %}
-        <td>Действия</td>
+        <td>{% trans 'Действия' %}</td>
         {% endif %}
 
     </tr>
     {% for i in post %}
     <tr>
-        <td>{{ i.name_post|censor }}</td>
-        <td>{{ i.date_post|date:'d M Y' }}</td>
-        <td>{{ i.text_post|truncatewords:20|censor }}</td>
+        <td style='width: 25% ', align="left">{% blocktrans with name=i.name_post|censor %} {{ name }} {% endblocktrans %}</td>
+        <td style='width: 10% '>{% blocktrans with date=i.date_post|date:'d M Y' %} {{ date }} {% endblocktrans %}</td>
+        <td style='width: 65% ', align="left">{% blocktrans with text=i.text_post|truncatewords:20|censor %} {{ text }} {% endblocktrans %}</td>
 
         <td>
             {# А здесь доступ для каждой ссылки теперь будем проверять отдельно #}
             {% if perms.news.change_product %}
-            <a href="{% url 'news_update' pk=i.id %}">Изменить</a>
+            <a href="{% url 'news_update' pk=i.id %}">{% trans 'Изменить' %}</a>
             {% endif %}
             {% if perms.news.delete_product %}
-            <a href="{% url 'news_delete' i.id %}">Удалить</a>
+            <a href="{% url 'news_delete' i.id %}">{% trans 'Удалить' %}</a>
             {% endif %}
         </td>
 
