--- a/templates/post_search.html
+++ b/templates/post_search.html
@@ -1,41 +1,42 @@
 {% extends 'flatpages/default.html' %}
 
+{% load i18n %} 
 {% load custom_filters %}
 {% load custom_tags %}
 
 {% block title %}
-Поиск постов
+{% trans 'Поиск постов' %}
 {% endblock title %}
 
 {% block content %}
-    <h1>Поиск постов</h1>
+    <h1>{% trans 'Поиск постов' %}</h1>
         {% if Is_not_author %}
-            <button><a href="{% url 'author_now' %}">Стать автором</a></button>
+            <button><a href="{% url 'author_now' %}">{% trans 'Стать автором' %}</a></button>
         {% endif %}
     <form action="" method="get">
         {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
         {{ filterset.form.as_p }}
         {# Добавим кнопку отправки данных формы #}
-        <input type="submit" value="Найти" />
+        <input type="submit" value={% trans "Найти" %} />
     </form>
     <hr>
     {% if news %}
 <table>
     <tr>
-        <tr>Название поста</tr>
-        <tr>Дата поста</tr>
-        <tr>Текст</tr>
+        <td>{% trans 'Название поста' %}</td>
+        <td>{% trans 'Дата поста' %}</td>
+        <td>{% trans 'Текст' %}</td>
     </tr>
     {% for i in news %}
     <tr>
-        <td>{{ i.name_post|censor }}</td>
-        <td>{{ i.date_post|date:'d M Y' }}</td>
-        <td>{{ i.text_post|truncatewords:20|censor }}</td>
+        <td style='width: 25% ', align="left" >{% blocktrans with name_post=i.name_post|censor %} {{ name_post }} {% endblocktrans %}</td>
+        <td style='width: 10% '>{% blocktrans with date_post=i.date_post|date:'d M Y' %} {{ date_post }} {% endblocktrans %}</td>
+        <td style='width: 65% ', align="left">{% blocktrans with text_post=i.text_post|truncatewords:20|censor %}{{ text_post }} {% endblocktrans %}</td>
     </tr>
     {% endfor %}
 </table>
     {% else %}
-        <h2>Новостей нет!</h2>
+        <h2>{% trans 'Новостей нет!' %}</h2>
     {% endif %}    
 
     {{ page_obj.number }}
