--- a/templates/subscriptions.html
+++ b/templates/subscriptions.html
@@ -1,7 +1,8 @@
 {% extends 'flatpages/default.html' %}
 
+{% load i18n %} 
 {% block title %}
-Subscriptions
+{% trans 'Подписка' %}
 {% endblock title %}
 
 {% block content %}
@@ -14,10 +15,10 @@ Subscriptions
 
                 {% if category.user_subscribed %}
                     <button disabled>Подписаться</button>
-                    <button name="action" value="unsubscribe">Отписаться</button>
+                    <button name="action" value="unsubscribe">{% trans 'Отписаться' %}</button>
                 {% else %}
-                    <button name="action" value="subscribe">Подписаться</button>
-                    <button disabled>Отписаться</button>
+                    <button name="action" value="subscribe">{% trans 'Подписаться' %}</button>
+                    <button disabled>{% trans 'Отписаться' %}</button>
                 {% endif %}
             </form>
         </p>
